@@ -171,7 +171,7 @@ public class SocialMediaServiceImpl implements SocialMediaService {
             return "Chỉnh sửa bài viết thành công!";
         } catch (Exception e) {
             System.out.println(e.toString());
-            return e.getMessage();
+            return "Đã có lỗi xảy ra!";
         }
     }
 
@@ -230,18 +230,18 @@ public class SocialMediaServiceImpl implements SocialMediaService {
             postList = postList.subList(page.intValue()*10, (page.intValue()+1)*10);
         } else {
             List <Post> socialPost = postRepository.findAll().stream().filter(post -> {
-                if (postIdSet.contains(post.getId())) {
-                    return false;
-                } else {
-                    postIdSet.add(post.getId());
-                }
-                return (post.getAudienceValue() == Audience.Public ||
-                        post.getUser().getId() == userId ||
-                        (friendService.isFriendUser(userId, post.getUser().getId()) &&
-                                (post.getAudienceValue() == Audience.AllFriend || (post.getAudienceValue() == Audience.SomeOneCanSee && !post.getPostUserList().stream().filter(postUser -> postUser.getPostUserType() == PostUserType.TagUser && postUser.getUser().getId() == userId).collect(Collectors.toList()).isEmpty())
-                                        || (post.getAudienceValue() == Audience.AllExceptSomeOne && post.getPostUserList().stream().filter(postUser -> postUser.getPostUserType() == PostUserType.TagUser && postUser.getUser().getId() == userId).collect(Collectors.toList()).isEmpty()))));
-            }).sorted((post1, post2) -> -post1.getCreatedAt().compareTo(post2.getCreatedAt()))  // Sort by posting date
-                .toList();
+                        if (postIdSet.contains(post.getId())) {
+                            return false;
+                        } else {
+                            postIdSet.add(post.getId());
+                        }
+                        return (post.getAudienceValue() == Audience.Public ||
+                                post.getUser().getId() == userId ||
+                                (friendService.isFriendUser(userId, post.getUser().getId()) &&
+                                        (post.getAudienceValue() == Audience.AllFriend || (post.getAudienceValue() == Audience.SomeOneCanSee && !post.getPostUserList().stream().filter(postUser -> postUser.getPostUserType() == PostUserType.TagUser && postUser.getUser().getId() == userId).collect(Collectors.toList()).isEmpty())
+                                                || (post.getAudienceValue() == Audience.AllExceptSomeOne && post.getPostUserList().stream().filter(postUser -> postUser.getPostUserType() == PostUserType.TagUser && postUser.getUser().getId() == userId).collect(Collectors.toList()).isEmpty()))));
+                    }).sorted((post1, post2) -> -post1.getCreatedAt().compareTo(post2.getCreatedAt()))  // Sort by posting date
+                    .toList();
             postList.addAll(socialPost);
             postList = postList.subList(page.intValue()*10, (page.intValue()+1)*10);
         }
